Swap to Groceries Dataset

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 Data Repository/Online Retail.csv
 
 .idea/Data-Mining-Algorithms.iml
+
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/misc.xml
 .idea/modules.xml
@@ -10,4 +11,5 @@ __pycache__/HashTree.cpython-36.pyc
 __pycache__/Utilities.cpython-36.pyc
 __pycache__/AssociationRulesCore.cpython-36.pyc
 ~WRL1991.tmp
+__pycache__/AssociationRulesCore.cpython-36.pyc
 
