--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Data Repository/Online Retail.csv
 .idea/workspace.xml
 __pycache__/HashTree.cpython-36.pyc
 __pycache__/Utilities.cpython-36.pyc
+__pycache__/AssociationRulesCore.cpython-36.pyc
