--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Data Repository/Online Retail.csv
 __pycache__/HashTree.cpython-36.pyc
 __pycache__/Utilities.cpython-36.pyc
 __pycache__/AssociationRulesCore.cpython-36.pyc
+~WRL1991.tmp
