--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 {\rtf1}
 Data Repository/Online Retail.csv
+__pycache__/Utilities.cpython-36.pyc
+__pycache__/HashTree.cpython-36.pyc
+__pycache__/AssociationRulesCore.cpython-36.pyc
+.idea/workspace.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/Data-Mining-Algorithms.iml
